--- a/library_project/templates/contact.html
+++ b/library_project/templates/contact.html
@@ -2,16 +2,17 @@
 
 {% block body_block %}
 <div class="text-center">
-    <h2 class="page-title">Kontakt</h2>
-    <p>tel. +48 41 999-99-99, +48 41 999-99-98</p>
-    <p>e-mail: <a href="mailto:biblioteka@gmail.pl">biblioteka@gmail.pl</a> </p>
-    <p>Kierownik: Jan Kowalski</p>
-    <p>e-mail: <a href="mailto:jan.kowalski@gmail.pl">jan.kowalski@gmail.pl</a> </p>
-                
-    <br>
-    <h4>Jak nas znaleźć</h4><br>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d629.3602218876023!2d20.640036138744644!3d50.87854985847255!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x471827be35849801%3A0x99149978917cac90!2sPolitechnika+%C5%9Awi%C4%99tokrzyska!5e0!3m2!1spl!2spl!4v1540650303504"
-        width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+    <div class="container">
+        <h2 class="page-title">Kontakt</h2>
+        <p>tel. +48 41 999-99-99, +48 41 999-99-98</p>
+        <p>e-mail: <a href="mailto:biblioteka@gmail.pl">biblioteka@gmail.pl</a> </p>
+        <p>Kierownik: Jan Kowalski</p>
+        <p>e-mail: <a href="mailto:jan.kowalski@gmail.pl">jan.kowalski@gmail.pl</a> </p>
+                    
+        <br>
+        <h4>Jak nas znaleźć</h4><br>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d629.3602218876023!2d20.640036138744644!3d50.87854985847255!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x471827be35849801%3A0x99149978917cac90!2sPolitechnika+%C5%9Awi%C4%99tokrzyska!5e0!3m2!1spl!2spl!4v1540650303504"
+            width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+    </div>
 </div>
-
 {% endblock %}
