--- a/library_project/templates/regulations.html
+++ b/library_project/templates/regulations.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block body_block %}
+<div class="container">
                <h2 class="page-title">Regulamin</h2>
                     <br>
                     <h4><p>§ 1 Zasady ogólne</h4>
@@ -40,5 +41,5 @@
 
                     <br>
                     <p> 5. Czytelnik samodzielnie bądź za pośrednictwem bibliotekarza może przesunąć termin zwrotu wypożyczonych mediów, jeśli nie ma na nie zapotrzebowania ze strony innych czytelników i nie minął termin ich zwrotu.</p>
-
+</div>
 {% endblock %}
