--- a/library_project/library_app/templates/library_app/book_detail.html
+++ b/library_project/library_app/templates/library_app/book_detail.html
@@ -2,58 +2,58 @@
 {% load custom_tags %}
 
 {% block body_block %}
+<div class="container">
+    <div class="page-title book_detail jumbotron">
+        <h2>Szczegóły książki</h2>
+        <ul>
+            {% if book.image_url %}
+            <img src="{{book.image_url}}" width="300px" height="300px">
+            {% endif %}
+            <li class="authors">
+                <b>Autor: </b>
+                {% for author in book.authors.all %}
+                    <a href="{% url 'library_app:author_detail' pk=author.pk %}">{{author.first_name}} {{author.last_name}}</a>
+                {% endfor %}
+            </li>
+            <li class="title"><b>Tytuł: </b> {{book.title}} </li>
 
-<div class="page-title book_detail jumbotron">
-    <h2>Szczegóły książki</h2>
-    <ul>
-        {% if book.image_url %}
-          <img src="{{book.image_url}}" width="300px" height="300px">
-        {% endif %}
-        <li class="authors">
-            <b>Autor: </b>
-            {% for author in book.authors.all %}
-                <a href="{% url 'library_app:author_detail' pk=author.pk %}">{{author.first_name}} {{author.last_name}}</a>
-            {% endfor %}
-        </li>
-        <li class="title"><b>Tytuł: </b> {{book.title}} </li>
+            <li class="category"><b>Kategoria: </b>
+                <a href="{% url 'library_app:category_detail' pk=book.category.pk %}">{{book.category.category_name}}</a>
+            </li>
 
-        <li class="category"><b>Kategoria: </b>
-            <a href="{% url 'library_app:category_detail' pk=book.category.pk %}">{{book.category.category_name}}</a>
-        </li>
+            <li class="publishing_house"><b>Wydawnictwo: </b>
+                <a href="{% url 'library_app:publishinghouse_detail' pk=book.publishing_house.pk %}">{{book.publishing_house.name}}</a>
+            </li>
 
-        <li class="publishing_house"><b>Wydawnictwo: </b>
-            <a href="{% url 'library_app:publishinghouse_detail' pk=book.publishing_house.pk %}">{{book.publishing_house.name}}</a>
-        </li>
+            <li class="isbn"><b>ISBN: </b> {{book.isbn}} </li>
+            <li class="edition"><b>Wydanie: </b> {{book.edition}} </li>
+            <li class="publish_year"><b>Data publikacji: </b> {{book.publish_date}} </li>
+            <li class="book_detail_description"><b>Opis: </b> {{book.description|safe|linebreaksbr}} </li>
+            <li class="book_bookcopies"><b>Liczba egzemplarzy: </b> {{book.bookcopies.count}} </li>
+            
+            {% free_bookcopies_counter_tag book.bookcopies as free_bookcopies %}
+            <li class="book_bookcopies"><b>Liczba wolnych: </b> {{free_bookcopies}} </li>
+        </ul>
 
-        <li class="isbn"><b>ISBN: </b> {{book.isbn}} </li>
-        <li class="edition"><b>Wydanie: </b> {{book.edition}} </li>
-        <li class="publish_year"><b>Data publikacji: </b> {{book.publish_date}} </li>
-        <li class="book_detail_description"><b>Opis: </b> {{book.description|safe|linebreaksbr}} </li>
-        <li class="book_bookcopies"><b>Liczba egzemplarzy: </b> {{book.bookcopies.count}} </li>
         
-        {% free_bookcopies_counter_tag book.bookcopies as free_bookcopies %}
-        <li class="book_bookcopies"><b>Liczba wolnych: </b> {{free_bookcopies}} </li>
-    </ul>
-
-    
-    <div class="book_list_back_link button">
-        <a href="{% url 'library_app:book_list' %}"><input type="button" class="btn btn-dark" value="Powrót"></a>
-    </div>
-
-    {% if user.is_authenticated and user.is_superuser %}
-        <div class="update_book_link button">
-            <a href="{% url 'library_app:book_update' pk=book.pk %}"><input type="submit" class="btn btn-warning" value="Edytuj książkę"></a>
+        <div class="book_list_back_link button">
+            <a href="{% url 'library_app:book_list' %}"><input type="button" class="btn btn-dark" value="Powrót"></a>
         </div>
 
-        {% if book.bookcopies.count > 0 %}
-        <h6>Nie można usuwać ksiązek które mają jakiś egzemplarz</h6>
-        {% else %}
-            <div class="delete_book_link button">
-                <a href="{% url 'library_app:book_delete' pk=book.pk %}"><input type="submit" class="btn btn-danger" value="Usuń książkę"></a>
+        {% if user.is_authenticated and user.is_superuser %}
+            <div class="update_book_link button">
+                <a href="{% url 'library_app:book_update' pk=book.pk %}"><input type="submit" class="btn btn-warning" value="Edytuj książkę"></a>
             </div>
+
+            {% if book.bookcopies.count > 0 %}
+            <h6>Nie można usuwać ksiązek które mają jakiś egzemplarz</h6>
+            {% else %}
+                <div class="delete_book_link button">
+                    <a href="{% url 'library_app:book_delete' pk=book.pk %}"><input type="submit" class="btn btn-danger" value="Usuń książkę"></a>
+                </div>
+            {% endif %}
+
         {% endif %}
-
-    {% endif %}
+    </div>
 </div>
-
 {% endblock %}
