--- a/library_project/library_app/templates/library_app/book_form.html
+++ b/library_project/library_app/templates/library_app/book_form.html
@@ -2,6 +2,7 @@
 {% load bootstrap4 %}
 
 {% block body_block %}
+<div class="container">
     <h1>Dodaj nową książkę</h1>
     <div class="other_create_buttons">
         <a class="btn btn-primary" href="{% url 'library_app:author_create' %}">Dodaj autora</a>
@@ -14,5 +15,6 @@
         {% bootstrap_form form %}
         <input type="submit" value="Dodaj" class="btn btn-primary btn-large add-obj-btn">
     </form>
+</div>
 
 {% endblock %}
