--- a/library_project/library_app/templates/library_app/book_list.html
+++ b/library_project/library_app/templates/library_app/book_list.html
@@ -50,10 +50,6 @@
             </tbody>
         </table>
 
-        {% if user.is_superuser %}
-            <p>Nie można usuwać ksiązek które mają jakiś egzemplarz</p>
-        {% endif %}
-
     <!-- pagination bar -->
     <div class="pagination_bar">
         {% if is_paginated %}
@@ -79,6 +75,14 @@
             <a type="button" class="btn btn-light"><span>&raquo;</span></a>
             {% endif %}
         </div>
+        {% endif %}
+    </div>
+
+    <div class="table-legend">
+        <p><b>Legenda:</b></p>
+        <p><img src="{% static 'website_icons/info_ico.png' %}" alt="Szczegóły" width="20" height="20">Szczegóły książki</p>
+        {% if user.is_superuser %}
+            <p><img src="{% static 'website_icons/del_ico.png' %}" alt="Usuń wypozyczenie" width="20" height="20">Usuń książkę (gdy nie ma jej egzemplarzy)</p>
         {% endif %}
     </div>
 
