--- a/library_project/library_app/templates/library_app/bookcopy_form.html
+++ b/library_project/library_app/templates/library_app/bookcopy_form.html
@@ -2,6 +2,7 @@
 {% load bootstrap4 %}
 
 {% block body_block %}
+<div class="container">
     <h1>Dodaj nowy egzemplarz książki</h1>
     <div class="other_create_buttons">
         <a class="btn btn-primary" href="{% url 'library_app:book_create' %}">Dodaj książkę</a>
@@ -12,5 +13,5 @@
         {% bootstrap_form form %}
         <input type="submit" value="Dodaj" class="btn btn-primary btn-large add-obj-btn">
     </form>
-
+</div>
 {% endblock %}
