--- a/library_project/library_app/templates/library_app/bookcopy_update_form.html
+++ b/library_project/library_app/templates/library_app/bookcopy_update_form.html
@@ -2,11 +2,12 @@
 {% load bootstrap4 %}
 
 {% block body_block %}
+<div class="container">
     <h1>Edytuj egzemplarz książki</h1>
     <form method="POST" action="{% url 'library_app:bookcopy_update' pk=bookcopy.pk %}" class="bookcopy-form">
         {% csrf_token %}
         {% bootstrap_form form %}
         <input type="submit" value="Uaktualnij" class="btn btn-primary btn-large">
     </form>
-
+</div>
 {% endblock %}
