--- a/library_project/library_app/templates/library_app/category_update_form.html
+++ b/library_project/library_app/templates/library_app/category_update_form.html
@@ -2,11 +2,12 @@
 {% load bootstrap4 %}
 
 {% block body_block %}
+<div class="container">
     <h1>Edytuj kategorię</h1>
     <form method="POST" action="{% url 'library_app:category_create' %}" class="category-form">
         {% csrf_token %}
         {% bootstrap_form form %}
         <input type="submit" value="Dodaj" class="btn btn-primary btn-large">
     </form>
-
+</div>
 {% endblock %}
