--- a/library_project/library_app/templates/library_app/publishinghouse_update_form.html
+++ b/library_project/library_app/templates/library_app/publishinghouse_update_form.html
@@ -2,6 +2,7 @@
 {% load bootstrap4 %}
 
 {% block body_block %}
+<div class="container">
     <h1>Wydawnictwo</h1>
     
     <form method="POST" action="{% url 'library_app:publishinghouse_create' %}" class="publishing-house-form">
@@ -9,5 +10,5 @@
         {% bootstrap_form form %}
         <input type="submit" value="Uaktualnij" class="btn btn-primary btn-large">
     </form>
-
+</div>
 {% endblock %}
