--- a/library_project/templates/index.html
+++ b/library_project/templates/index.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
 {% block body_block %}
-<h1 class="page-title">Biblioteka</h1>
+<div class="container">
+    <h1 class="page-title">Biblioteka</h1>
+</div>
 {% endblock %}
