--- a/library_project/templates/thanks.html
+++ b/library_project/templates/thanks.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block body_block %}
-<h1 class="page-title">Dziękujemy za odwiedziny!</h1>
-
+<div class="container">
+    <h1 class="page-title">Dziękujemy za odwiedziny!</h1>
+</div>
 {% endblock %}
