--- a/library_project/templates/base.html
+++ b/library_project/templates/base.html
@@ -30,9 +30,12 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="{% url 'library_app:book_list' %}">Katalog online</a>
                 </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'library_app:my_borrow_list' %}">Twoje wypożyczenia</a>
-                </li>
+                {% if user.is_authenticated %}
+                    <li class="nav-item active">
+                        <a class="nav-link" href="{% url 'library_app:my_borrow_list' %}">Twoje wypożyczenia</a>
+                    </li>
+                {% endif %}
+
             </ul>
             <ul class="navbar-nav" >
             {% if user.is_authenticated and user.is_superuser %}
