--- a/library_project/library_app/templates/library_app/bookcopy_list.html
+++ b/library_project/library_app/templates/library_app/bookcopy_list.html
@@ -7,59 +7,105 @@
     <div class="page-title">
         <h2>Lista egzemplarzy </h2>
     </div>
-        <div class="other_create_buttons">
-            <a class="btn btn-primary" href="{% url 'library_app:bookcopy_create' %}">Dodaj egzemplarz książki</a>
-        </div>
 
-        <table class="table table-bordered table-hover">
-            <thead class="thead-light">
-                <tr>
-                    <th scope="col">Opcje</th>
-                    <th scope="col">Autor</th>
-                    <th scope="col">Książka</th>
-                    <th scope="col">Nr egzemplarza</th>
-                    <th scope="col">Pożyczone przez</th>
-                    <th scope="col">Data wypożyczenia</th>
-                    <th scope="col">Data oddania</th>
-                </tr>
-            </thead>
-            <tbody>
-            
-            
-            {% for bookcopy in bookcopy_list %}
-            {% get_bookcopy_borrow bookcopy.id as book_copy_borrow_obj %}
+        {% if user.is_authenticated and user.is_superuser %} <!--Jesli strone odwiedza superuser-->
+            <div class="other_create_buttons">
+                <a class="btn btn-primary" href="{% url 'library_app:bookcopy_create' %}">Dodaj egzemplarz książki</a>
+            </div>
+
+            <table class="table table-bordered table-hover">
+                <thead class="thead-light">
                     <tr>
-                         <td>
-                            <a href="{% url 'library_app:bookcopy_detail' pk=bookcopy.pk %}"><img src="{% static 'website_icons/info_ico.png' %}" alt="Szczegóły" width="20" height="20"></a>
+                        <th scope="col">Opcje</th>
+                        <th scope="col">Autor</th>
+                        <th scope="col">Książka</th>
+                        <th scope="col">Nr egzemplarza</th>
+                        <th scope="col">Pożyczone przez</th>
+                        <th scope="col">Data wypożyczenia</th>
+                        <th scope="col">Data oddania</th>
+                    </tr>
+                </thead>
+                <tbody>
+            
+            
+                    {% for bookcopy in bookcopy_list %}
+                    {% get_bookcopy_borrow bookcopy.id as book_copy_borrow_obj %}
+                    <tr>
+                        <td>
+                            <a href="{% url 'library_app:bookcopy_detail' pk=bookcopy.pk %}"><img src="{% static 'website_icons/info_ico.png' %}"
+                                    alt="Szczegóły" width="20" height="20"></a>
                             {% if bookcopy.is_borrowed == False %}
-                                <a href="{% url 'library_app:bookcopy_delete' pk=bookcopy.pk %}"><img src="{% static 'website_icons/del_ico.png' %}" alt="Usuń" width="20" height="20"></a> 
-                            {% else %} <!-- Jesli egzemplarz wypozyczony to link do oddania egzemplarza -->
-                                 <a href="{% url 'library_app:borrow_delete' pk=book_copy_borrow_obj.pk %}"><img src="{% static 'website_icons/del_borrow_ico.png' %}" alt="Usuń wypozyczenie" width="20" height="20"></a> 
+                            <a href="{% url 'library_app:bookcopy_delete' pk=bookcopy.pk %}"><img src="{% static 'website_icons/del_ico.png' %}"
+                                    alt="Usuń" width="20" height="20"></a>
+                            {% else %}
+                            <!-- Jesli egzemplarz wypozyczony to link do oddania egzemplarza -->
+                            <a href="{% url 'library_app:borrow_delete' pk=book_copy_borrow_obj.pk %}"><img src="{% static 'website_icons/del_borrow_ico.png' %}"
+                                    alt="Usuń wypozyczenie" width="20" height="20"></a>
                             {% endif %}
                         </td>
-                        
+            
                         <td>
                             {% for author in bookcopy.book.authors.all %}
                             <a href="{% url 'library_app:author_detail' pk=author.pk %}">{{author.first_name}} {{author.last_name}}</a>
                             {% endfor %}
                         </td>
                         <td><a href="{% url 'library_app:book_detail' pk=bookcopy.book.pk %}">{{bookcopy.book.title}}</a></td>
-                        <td><a href="{% url 'library_app:bookcopy_detail' pk=bookcopy.pk %}"></a>{{bookcopy.id}}</a></td>  
-                        
+                        <td><a href="{% url 'library_app:bookcopy_detail' pk=bookcopy.pk %}"></a>{{bookcopy.id}}</a></td>
+            
                         {% if book_copy_borrow_obj %}
-                            <td>{{book_copy_borrow_obj.user.get_full_name}}</a></td>
-                            <td>{{book_copy_borrow_obj.borrow_date}}</a></td>
-                            <td>{{book_copy_borrow_obj.receive_date}}</a></td>
+                        <td>{{book_copy_borrow_obj.user.get_full_name}}</a></td>
+                        <td>{{book_copy_borrow_obj.borrow_date}}</a></td>
+                        <td>{{book_copy_borrow_obj.receive_date}}</a></td>
                         {% else %}
-                            <td>-</td>
-                            <td>-</td>
-                            <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
                         {% endif %}
                     </tr>
-            {% endfor %}
+                    {% endfor %}
+            
+                </tbody>
+            </table>
+        {% else %} <!--Jesli strone odwiedza reszta -->
+                        <table class="table table-bordered table-hover">
+                <thead class="thead-light">
+                    <tr>
+                        <th scope="col">Opcje</th>
+                        <th scope="col">Autor</th>
+                        <th scope="col">Książka</th>
+                        <th scope="col">Nr egzemplarza</th>
+                        <th scope="col">Czy wypożyczone</th>
+                    </tr>
+                </thead>
+                <tbody>          
+                    {% for bookcopy in bookcopy_list %}
+                    <tr>
+                        <td>
+                            <a href="{% url 'library_app:bookcopy_detail' pk=bookcopy.pk %}"><img src="{% static 'website_icons/info_ico.png' %}"
+                                    alt="Szczegóły" width="20" height="20"></a>
+                        </td>
+            
+                        <td>
+                            {% for author in bookcopy.book.authors.all %}
+                            <a href="{% url 'library_app:author_detail' pk=author.pk %}">{{author.first_name}} {{author.last_name}}</a>
+                            {% endfor %}
+                        </td>
+                        <td><a href="{% url 'library_app:book_detail' pk=bookcopy.book.pk %}">{{bookcopy.book.title}}</a></td>
+                        <td><a href="{% url 'library_app:bookcopy_detail' pk=bookcopy.pk %}"></a>{{bookcopy.id}}</a></td>
+                        <td>
+                            {% if bookcopy.is_borrowed %}
+                                Tak
+                            {% else %}
+                                Nie
+                            {% endif %}
+                        </td>
 
-            </tbody>
-        </table>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        {% endif %} <!--Endif dla wyboru czy uzytkownik jest superuserem-->
+        
 
         <!-- pagination bar -->
      <div class="pagination_bar">
