--- a/library_project/templates/base.html
+++ b/library_project/templates/base.html
@@ -48,8 +48,8 @@
                         <div class="dropdown-menu" aria-labelledby="BorrowBook">
                             <a class="dropdown-item" href="{% url 'library_app:borrow_create' %}">Wypożycz egzemplarz książki</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="{% url 'library_app:borrow_list' %}">Lista egzemplarzy</a>
-                            <a class="dropdown-item" href="{% url 'library_app:bookcopy_list' %}">Lista wypożyczeń</a>
+                            <a class="dropdown-item" href="{% url 'library_app:bookcopy_list' %}">Lista egzemplarzy</a>
+                            <a class="dropdown-item" href="{% url 'library_app:borrow_list' %}">Lista wypożyczeń</a>
                         </div>
                     </li>
 
